--- a/Package.json
+++ b/Package.json
@@ -11,7 +11,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "dotenv": "^16.3.1",
-
+    "bcryptjs": "^3.2.1",
     "jsonwebtoken": "^9.0.2",
     "express-session": "^1.17.3",
     "cors": "^2.8.5"
