--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^3.0.3"
+    "bcryptjs": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
     "express-session": "^1.17.3",
     "cors": "^2.8.5"
@@ -19,6 +19,4 @@
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-
 }
-
